# llama-client

./: README.md  pyproject.toml
main/: __main__.py  app.py  main_window.py
